# PersonalFinanceTracker

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  diseno-app-finanzas-personales.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9e8669e0391b_initial_schema.py
scripts/: entrypoint.sh  seed_categorias.py  start-dashboard.sh
src/finanzas/application/ports/: conector_bancario.py  enviador_email.py  repositorio_categorias.py  repositorio_movimientos.py
src/finanzas/application/services/: calculadora_financiera.py
src/finanzas/application/use_cases/: conciliar_movimientos_banco.py  generar_reporte_semanal.py  importar_csv.py  listar_movimientos.py  obtener_balance.py  registrar_movimiento.py
src/finanzas/config/: settings.py
src/finanzas/domain/: exceptions.py
src/finanzas/domain/entities/: categoria.py  cuenta_bancaria.py  movimiento.py  reporte_generado.py
src/finanzas/domain/value_objects/: dinero.py  periodo.py
src/finanzas/infrastructure/bancos/: conector_simulado.py
src/finanzas/infrastructure/db/: engine.py  models.py
src/finanzas/infrastructure/email/: enviador_email_smtp.py
tests/: conftest.py
tests/unit/application/: test_calculadora_avanzada.py  test_calculadora_financiera.py  test_conciliar_movimientos_banco.py  test_importar_csv.py  test_listar_movimientos.py  test_obtener_balance.py  test_registrar_movimiento.py
tests/unit/domain/: test_dinero.py  test_periodo.py
tests/unit/infrastructure/: test_conector_simulado.py
(+7 files in other folders)
