[project]
name = "finanzas-personales"
version = "0.1.0"
description = "Personal finance management application"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "fastapi>=0.115.0",
    "streamlit>=1.40.0",
    "apscheduler>=3.10.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "python-telegram-bot>=21.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "matplotlib>=3.9.0",
    "cryptography>=43.0.0",
    "alembic>=1.13.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
finanzas = "finanzas.interfaces.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
exclude = ["tests/", "scripts/", "alembic/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["finanzas.interfaces.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/finanzas --cov-report=term-missing"
